# document-intelligence-refinery

./: .env.example  DOMAIN_NOTES.md  Makefile  README.md  REPORT.md  pyproject.toml
.cursor/rules/: uv-only.mdc
.refinery/: extraction_ledger.jsonl  fact_table.db
.refinery/vector_store/: chroma.sqlite3
.specify/memory/: constitution.md
outputs/char-density/: mixed.json  native_digital.json  (+1 more)
plans/: phase-0-domain-onboarding.plan.md  phase-1-triage.plan.md  phase-2-extraction.plan.md  phase-3-chunking-pageindex.plan.md  phase-4-query-provenance.plan.md
rubric/: extraction_rules.yaml
scripts/: build_pageindex_example.py  demo_vector_store.py  dump_ldus.py  generate_refinery_artifacts.py  inspect_refinery_data.py  no_pip.sh  run_audit.py  run_character_density_analysis.py  run_docling.py  run_pipeline.py  run_query_agent.py  run_refinery_demo.py
specs/: 01-document-intelligence-refinery-system.md  02-triage-agent-and-document-profile.md  03-multi-strategy-extraction-engine.md  04-semantic-chunking-and-ldu-spec.md  05-pageindex-builder-spec.md  06-query-agent-and-provenance-spec.md  07-models-schemas-spec.md  08-data-layer-spec.md  09-infrastructure-spec.md
src/: __init__.py  main.py  tracing.py
tasks/: phase-0-domain-onboarding.tasks.md  phase-1-triage.tasks.md  phase-2-extraction.tasks.md  phase-3-chunking-pageindex.tasks.md  phase-4-query-provenance.tasks.md
tests/: test_audit_mode.py  test_chunk_validator.py  test_chunking_engine.py  test_document_profile.py  test_extracted_document.py  test_extraction_ledger.py  test_extraction_router.py  test_fact_table.py  test_fast_text_extractor.py  test_indexer.py  test_ldu.py  test_models_common.py  test_provenance.py  test_strategies_base.py  test_triage_cost_derivation.py  test_triage_domain.py  test_triage_layout.py  test_triage_origin.py  test_vector_store.py
(+29 files in other folders)
