[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Document Intelligence Refinery — triage, extraction, chunking, query with provenance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pdfplumber>=0.10.0",
    "pypdf>=3.0.0",
    "pyyaml>=6.0",
    "docling>=2.76.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
docling = [
    "docling",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
